# engineering_assignment_template

./: PRESENTATION_INSTRUCTIONS.md  README.md  pyproject.toml
mindtrace/: __init__.py  cbrain_pipeline.py
mindtrace/cameras/: README.md
mindtrace/cameras/base/: __init__.py  camera_base.py
mindtrace/cameras/daheng/: __init__.py  daheng_cameras.py  mock_daheng.py
mindtrace/core/: config.ini  config.py
mindtrace/data/: __init__.py  mnist.py
mindtrace/models/: __init__.py  lightning_wrapper.py  mlp.py
mindtrace/registry/: __init__.py  callbacks.py
mindtrace/scripts/: camera_setup.py
mindtrace/services/: __init__.py  math.py
mindtrace/services/base/: __init__.py  cm_base.py  launcher.py  service.py  types.py  utils.py
mindtrace/services/gateway/: gateway.py  gateway_connection_manager.py  proxy_connection_manager.py  types.py
mindtrace/tests/: test_decorators.py
mindtrace/utils/: __init__.py  downloads.py  fastapi_utils.py  utils.py
tests/cameras/daheng/: test_daheng_camera.py  test_mock_daheng.py
