[project]
name = "mnist-training-template"
version = "0.1.0"
description = "A simple MNIST training template library."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "mlflow>=2.20.3",
    "pillow>=11.1.0",
    "psutil>=7.0.0",
    "pydantic>=2.10.6",
    "pyrsmi>=0.2.0",
    "pytorch-lightning>=2.5.0.post0",
    "torch>=2.6.0",
    "torchmetrics>=1.6.2",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
