[project]
name = "mnist-training-template"
version = "0.1.0"
description = "A simple MNIST training template library."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=0.34.2",
    "diffusers>=0.30.3",
    "discord-py>=2.4.0",
    "ds-run>=1.3.0",
    "fastapi>=0.115.0",
    "gunicorn>=23.0.0",
    "httpx>=0.27.2",
    "hydra-core>=1.3.2",
    "lightning>=2.4.0",
    "matplotlib>=3.9.2",
    "mlflow>=2.16.2",
    "numpy>=2.1.1",
    "openai>=1.55.1",
    "opencv-python>=4.10.0.84",
    "pika>=1.3.2",
    "pillow>=10.4.0",
    "pre-commit>=3.8.0",
    "pycomm3>=1.2.14",
    "pytest-asyncio>=0.25.0",
    "redis>=5.2.0",
    "ruff==0.8.6",
    "segment-anything",
    "supervision==0.23.0",
    "tensorboard>=2.18.0",
    "torch<2.5",
    "torchmetrics>=1.4.2",
    "torchvision>=0.18.1",
    "tqdm>=4.66.5",
    "transformers>=4.45.1",
    "ultralytics",
    "uvicorn>=0.31.0",
    "label-studio-sdk>=1.0.0",
    "google-cloud-vision>=3.0.0",
    "google-cloud-storage>=2.10.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-logging-loki>=0.3.1",
    "openai>=1.57.4",
    "gxipy @ git+https://github.com/Mindtrace/gxipy.git@gxipy_deploy",
]